<resources>
    <string name="app_name">MazeSolver</string>
    <string name="title_activity_maze_solver">MazeSolverActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Options Screen Strings -->
    <string name="maze_options">Configure Maze</string>
    <string name="maze_height">Maze Height</string>
    <string name="maze_width">Maze Width</string>
    <string name="maze_height_default">30</string>
    <string name="maze_width_default">40</string>
    <string name="solve_time_interval_default">500</string>
    <string name="confirm_button">Confirm</string>
    <string name="solve_time_interval">Maze Step Time (ms)</string>
    <string name="maze_percent_missing">Percent Missing</string>
    <string name="maze_percent_missing_default">0</string>

    <string name="solve_method_prompt">Solve Method</string>
    <string-array name="solve_methods">
        <item>Breadth-First Search</item>
        <item>Depth-First Search</item>
        <item>A*</item>
        <item>Best-First Search</item>
    </string-array>

    <!-- Maze Solve screen Strings -->

    <!-- Loading Screen Strings --> 
    <string name="generating_maze_text">Generating Maze...</string>
    <string name="solving_maze_text">Solving Maze...</string>



</resources>
