<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maze_options"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/maze_height"/>

    <EditText
        android:id="@+id/maze_height_entry"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/maze_height_default"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/maze_width"/>

    <EditText
        android:id="@+id/maze_width_entry"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/maze_width_default"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/solve_time_interval"/>

    <EditText
        android:id="@+id/solve_time_delay"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/solve_time_interval_default"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/maze_percent_missing"/>

    <EditText
        android:id="@+id/maze_percent_missing"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/maze_percent_missing_default"/>

    <Spinner
        android:id="@+id/method_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/solve_methods"
        android:prompt="@string/solve_method_prompt"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <Button
        android:id="@+id/confirm_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>
</LinearLayout>